fix horizontal scrolling

--- a/src/components/global.scss
+++ b/src/components/global.scss
@@ -199,5 +199,10 @@ video {
     color: $primary;
 }
 
+.row-fix {
+    margin-left: 0 !important;
+    margin-right: 0 !important;
+}
+
 
 
